# DataEngineering

./: .gitignore  README.md  emotion-wheel-prompt.txt  index.html  readlocalfile.py  sample-users.md
Autocode/Autocode/: LICENSE  MANIFEST.in  PROMPT.md  README.md  pyproject.toml  requirements.txt  sample_data.csv  setup.py  test_installation.py
Autocode/Autocode/datamodel_profiler/: __init__.py  cli.py
Autocode/Autocode/datamodel_profiler/core/: __init__.py  constraint_suggestion.py  key_detection.py  profiler.py  schema_inference.py
Autocode/Autocode/datamodel_profiler/io/: __init__.py  data_loader.py  formats.py
Autocode/Autocode/datamodel_profiler/utils/: __init__.py  formatters.py  types.py  validators.py
Autocode/Autocode/examples/: __init__.py  basic_usage.py
Autocode/Autocode/test_results/: column_stats.csv  profile.json  schema.avsc  schema.json  schema.sql  schema_arrow.txt  schema_dataclass.py  schema_pydantic.py
Autocode/Autocode/tests/: __init__.py  test_constraint_suggestion.py  test_key_detection.py  test_profiler.py  test_schema_inference.py
DataEngineering/azure-data-platform-health-dashboard/: README.md
DataEngineering/azure-data-platform-health-dashboard/docs/: data-model.md  design-document.md  metrics-matrix.md  setup-guide.md
DataEngineering/azure-data-platform-health-dashboard/samples/: adf_activity_run_sample.json  adf_pipeline_run_sample.json  compute_usage_sample.csv  dq_events_sample.json  fabric_pipeline_run_sample.json
DataEngineering/metadata-driven-pipelines-azure/config/: pipeline_config.yaml  pipeline_spark_config.yaml
DataEngineering/metadata-driven-pipelines-azure/docs/: metadata_framework_overview.md
DataEngineering/metadata-driven-pipelines-azure/scripts/: export_pipeline_config_to_xlsx.py  generate_pipeline_spark_config.py
dataquality/: .gitignore
emotion-wheel-vibes-hub/: tailwind.config.ts
emotion-wheel-vibes-hub/src/components/: ContactSection.tsx  EmotionWheelFullscreen.tsx  MediaBar.tsx  Navigation.tsx  TranslationTooltip.tsx
emotion-wheel-vibes-hub/src/data/: emotions.ts  emotions_tamil.ts  emotions_telugu.ts  mediaLinks.ts
emotion-wheel-vibes-hub/src/pages/: Index.tsx
emotion-wheel-vibes-hub/src/translations/: english.ts  tamil.ts  telugu.ts
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
metadata-driven-pipelines-azure/: README.md
metadata-driven-pipelines-azure/config/: pipeline_config.yaml.example  pipeline_spark_config.yaml.example
metadata-driven-pipelines-azure/data/: Fabric_Spark_Settings_Variable_Library.xlsx
metadata-driven-pipelines-azure/docs/: metadata_framework_overview.md
metadata-driven-pipelines-azure/infra/: README.md
metadata-driven-pipelines-azure/metadata/datamodel/: datapipeline_metrics.md  metadata_model.md
metadata-driven-pipelines-azure/metadata/ddl/: fabric_variable_catalog.sql  metadata_views.sql  pipeline_run_metrics.sql  schema_change_log.sql  schema_compatibility_rules.sql  source_object_columns.sql  source_objects.sql  vw_fabric_variables_resolved.sql
metadata-driven-pipelines-azure/metadata/dml/: schema_compatibility_rules_seed.sql  source_object_columns_scrachpad.sql  source_objects_seed.sql  source_systems_seed.sql
metadata-driven-pipelines-azure/scripts/: export_pipeline_config_to_xlsx.py  generate_pipeline_spark_config.py
metadata-driven-pipelines-azure/src/framework/: config_loader.py  dq_engine.py  hy_brnz_Incr_Load_Wrapper_sample.py  models.py  (+8 more)
postgresssql/: emp_dept_piplienqry.sql  emp_dept_tbles.sql
src/: App.tsx  index.css
src/components/: AboutSection.tsx  EmotionTracker.tsx  EmotionWheel.tsx  EmotionWheelFullscreen.tsx  FeaturesSection.tsx  FeelingsJournal.tsx  HeroSection.tsx  HowToUseGuide.tsx  MediaBar.tsx  Navigation.tsx  StandaloneFeelingsJournal.tsx
src/contexts/: AuthContext.tsx
src/data/: emotions.ts  emotions_english.ts  emotions_spanish.ts  emotions_telugu.ts  mediaLinks.ts
src/pages/: Auth.tsx  Index.tsx  NotFound.tsx
src/translations/: english.ts  index.ts  spanish.ts  tamil.ts  telugu.ts
supabase/: config.toml
supabase/migrations/: 20250713230644-bec53c0f-cf81-400e-ba5f-e2a2c27bb37e.sql
(+92 files in other folders)
